import { render, screen, fireEvent, waitFor } from "@testing-library/react";
import { describe, it, expect, vi, beforeEach, afterEach } from "vitest";

import ScenarioDetailsCard from "../ScenarioDetailsCard";
import { ScenarioDetailsCardProps } from "../types";

// --- Mocks Setup ---

// Mock framer-motion
vi.mock("framer-motion", () => ({
  motion: {
    div: ({ children, ...props }: any) => <div {...props}>{children}</div>,
  },
}));

// Mock @mui/material CircularProgress
vi.mock("@mui/material", async importOriginal => {
  const original = (await importOriginal()) as Record<string, unknown>;
  return {
    ...original,
    CircularProgress: ({ size, ...props }: any) => (
      <div data-testid="circular-progress" data-size={size} {...props} />
    ),
  };
});

// Mock sonner toast
const mockToastSuccess = vi.fn();
vi.mock("sonner", () => ({
  toast: {
    success: (...args: any[]) => mockToastSuccess(...args),
  },
}));

// Mock @assets/icons with importOriginal to preserve other exports (like ScribeIcon used in constants)
// This must be before @components mock since @components might trigger @constants which needs these icons
vi.mock("@assets/icons", async importOriginal => {
  const original = (await importOriginal()) as Record<string, unknown>;
  return {
    ...original,
    ShareIcon: (props: any) => <svg data-testid="share-icon" {...props} />,
    // Ensure ScribeIcon and other icons are available if they exist in original
    // The spread operator should handle this, but being explicit can help
  };
});

// Mock @constants to prevent it from importing real icons during test setup
// This ensures @assets/icons mock is used when constants are loaded
vi.mock("@constants", async importOriginal => {
  const original = (await importOriginal()) as Record<string, unknown>;
  return {
    ...original,
    // Keep all original exports, but this ensures the module loads with mocked icons
  };
});

// Mock @components to handle Button import (component imports from ".." which resolves to components/index)
vi.mock("@components", async importOriginal => {
  const original = (await importOriginal()) as Record<string, unknown>;
  const MockButton = ({ children, onClick, disabled, variant, className, ...props }: any) => (
    <button
      data-testid="mock-button"
      onClick={onClick}
      disabled={disabled}
      data-variant={variant}
      className={className}
      {...props}
    >
      {children}
    </button>
  );

  return {
    ...original,
    Button: MockButton,
  };
});

// Mock CustomVideo from ui-shared
vi.mock("@ally-ui-mono/ui-shared", () => ({
  CustomVideo: ({ src, alt, className }: any) => (
    <video data-testid="custom-video" src={src} aria-label={alt} className={className} />
  ),
  FEATURE_FLAGS_MAP: {
    TERMS_AND_CONDITION_FLAG: false,
    TRIGGER_WARNINGS_FLAG: false,
  },
}));

// Mock Clipboard API - this will be set up in beforeEach
let mockWriteText: any;

// --- Test Setup ---

const mockOnStart = vi.fn();

const defaultProps: ScenarioDetailsCardProps = {
  coverImage: "https://example.com/scenario-details-image.jpg",
  isStarting: false,
  longDescription:
    "This is a detailed description of the scenario that explains what the simulation covers.",
  onStart: mockOnStart,
  title: "Test Scenario Details",
  noCredits: false,
};

const renderComponent = (props: Partial<ScenarioDetailsCardProps> = {}) => {
  return render(<ScenarioDetailsCard {...defaultProps} {...props} />);
};

describe("ScenarioDetailsCard", () => {
  beforeEach(() => {
    vi.clearAllMocks();
    // Setup clipboard mock
    mockWriteText = vi.fn().mockResolvedValue(undefined);
    Object.assign(navigator, {
      clipboard: {
        writeText: mockWriteText,
      },
    });
    // Reset window.location
    delete (window as any).location;
    window.location = { href: "https://example.com/scenario/123" } as Location;
  });

  afterEach(() => {
    vi.restoreAllMocks();
  });

  // --- Rendering Tests ---

  it("should render the card container", () => {
    renderComponent();
    const card = screen.getByRole("dialog");
    expect(card).toBeInTheDocument();
    expect(card).toHaveAttribute("aria-labelledby", "scenario-title");
  });

  it("should render the title", () => {
    const title = "Custom Scenario Title";
    renderComponent({ title });
    expect(screen.getByText(title)).toBeInTheDocument();
    // Font color and size tests removed: They change frequently during development
  });

  it("should render the long description when provided", () => {
    const description = "Custom long description text";
    renderComponent({ longDescription: description });
    expect(screen.getByText("Scenario:")).toBeInTheDocument();
    expect(screen.getByText(description)).toBeInTheDocument();
  });

  it("should not render description section when longDescription is not provided", () => {
    renderComponent({ longDescription: undefined });
    expect(screen.queryByText("Scenario:")).not.toBeInTheDocument();
  });

  it("should render the cover image with correct attributes", () => {
    const imageUrl = "https://example.com/test-image.jpg";
    renderComponent({ coverImage: imageUrl });
    const image = screen.getByAltText("Test Scenario Details scenario preview");
    expect(image).toBeInTheDocument();
    expect(image).toHaveAttribute("src", imageUrl);
    expect(image).toHaveAttribute("loading", "lazy");
  });

  it("should render the ShareIcon", () => {
    renderComponent();
    expect(screen.getByTestId("share-icon")).toBeInTheDocument();
  });

  it("should render the Share button text", () => {
    renderComponent();
    expect(screen.getByText("Share")).toBeInTheDocument();
    expect(screen.getByText("Share")).toHaveClass("text-base");
  });

  it("should render the Start session button", () => {
    renderComponent();
    const button = screen.getByRole("button", { name: /Start Simulation/i });
    expect(button).toBeInTheDocument();
    expect(button).toHaveAttribute("aria-label", "Start simulation");
  });

  // --- Image Error Handling Tests ---

  it("should show fallback message when image fails to load", () => {
    renderComponent();
    const image = screen.getByAltText("Test Scenario Details scenario preview");

    fireEvent.error(image);

    expect(screen.getByText("Media not available")).toBeInTheDocument();
    expect(screen.queryByAltText("Test Scenario Details scenario preview")).not.toBeInTheDocument();
  });

  // --- Button State Tests ---

  it("should disable button when isStarting is true", () => {
    renderComponent({ isStarting: true });
    const button = screen.getByRole("button", { name: /Start Simulation/i });
    expect(button).toBeDisabled();
    expect(button).toHaveClass("!bg-gray-400");
  });

  it("should disable button when noCredits is true", () => {
    renderComponent({ noCredits: true });
    const button = screen.getByRole("button", { name: /Start simulation/i });
    expect(button).toBeDisabled();
    expect(button).toHaveClass("!bg-gray-400");
  });

  it("should disable button when both isStarting and noCredits are true", () => {
    renderComponent({ isStarting: true, noCredits: true });
    const button = screen.getByRole("button", { name: /Start Simulation/i });
    expect(button).toBeDisabled();
  });

  it("should enable button when both isStarting and noCredits are false", () => {
    renderComponent({ isStarting: false, noCredits: false });
    const button = screen.getByRole("button", { name: /Start Simulation/i });
    expect(button).not.toBeDisabled();
  });

  it("should show CircularProgress when isStarting is true", () => {
    renderComponent({ isStarting: true });
    expect(screen.getByTestId("circular-progress")).toBeInTheDocument();
    expect(screen.getByTestId("circular-progress")).toHaveAttribute("data-size", "16");
  });

  it("should not show CircularProgress when isStarting is false", () => {
    renderComponent({ isStarting: false });
    expect(screen.queryByTestId("circular-progress")).not.toBeInTheDocument();
  });

  // --- Interaction Tests ---

  it("should call onStart when Start simulation button is clicked", () => {
    renderComponent();
    const button = screen.getByRole("button", { name: /Start Simulation/i });

    fireEvent.click(button);
    expect(mockOnStart).toHaveBeenCalledTimes(1);
  });

  it("should stop event propagation when Start simulation button is clicked", () => {
    const parentClickHandler = vi.fn();
    const { container } = renderComponent();
    const card = container.querySelector('[role="dialog"]');
    if (card) {
      card.addEventListener("click", parentClickHandler);
    }

    const button = screen.getByRole("button", { name: /Start Simulation/i });
    fireEvent.click(button);

    expect(mockOnStart).toHaveBeenCalledTimes(1);
    // Note: In a real scenario, event.stopPropagation would prevent parent handler
    // This test verifies the code calls stopPropagation
  });

  it("should copy URL to clipboard when Share is clicked", async () => {
    window.location.href = "https://example.com/scenario/test-123";
    renderComponent();

    const shareButton = screen.getByRole("button", { name: /Share scenario/i });
    fireEvent.click(shareButton);

    await waitFor(() => {
      expect(mockWriteText).toHaveBeenCalledWith("https://example.com/scenario/test-123");
    });
    expect(mockToastSuccess).toHaveBeenCalledWith("Scenario link copied to clipboard!");
  });

  it("should stop event propagation when Share is clicked", () => {
    const parentClickHandler = vi.fn();
    const { container } = renderComponent();
    const card = container.querySelector('[role="dialog"]');
    if (card) {
      card.addEventListener("click", parentClickHandler);
    }

    const shareButton = screen.getByRole("button", { name: /Share scenario/i });
    fireEvent.click(shareButton);

    // Verify share functionality was called
    expect(mockWriteText).toHaveBeenCalled();
  });
});
