// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScenarioDetailsCard > should match snapshot when fully rendered 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex flex-col w-full max-w-[600px] bg-white overflow-hidden transition-all duration-300 rounded-lg origin-top border border-[#E5E7EB] p-3"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div
      class="relative w-full rounded-lg overflow-hidden"
    >
      <img
        alt="Test Scenario Details scenario preview"
        class="w-full max-h-[320px] object-cover rounded-md"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col gap-1 mt-3 font-primary"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="text-[#0D0D0D] text-[20px]"
          id="scenario-title"
        >
          Test Scenario Details
        </div>
        <button
          aria-label="Share scenario"
          class="flex items-center gap-2 px-4 py-2 text-[#374151] hover:bg-gray-50 rounded-md transition-colors"
          title="Share this scenario"
        >
          <svg
            data-testid="share-icon"
          />
          <span
            class="text-base"
          >
            Share
          </span>
        </button>
      </div>
      <div
        class="flex flex-col"
      >
        <div
          class="text-base font-semibold text-[#0D0D0D]"
        >
          Scenario:
        </div>
        <p
          class="text-base text-[#656565]"
        >
          This is a detailed description of the scenario that explains what the simulation covers.
        </p>
      </div>
      <div
        class="flex justify-center mt-2 mb-2"
      >
        <button
          aria-label="Start simulation"
          class="!font-tertiary !text-base  !py-3 false w-[240px]"
          data-testid="mock-button"
          data-variant="primary"
        >
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScenarioDetailsCard > should match snapshot when isStarting is true 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex flex-col w-full max-w-[600px] bg-white overflow-hidden transition-all duration-300 rounded-lg origin-top border border-[#E5E7EB] p-3"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div
      class="relative w-full rounded-lg overflow-hidden"
    >
      <img
        alt="Test Scenario Details scenario preview"
        class="w-full max-h-[320px] object-cover rounded-md"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col gap-1 mt-3 font-primary"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="text-[#0D0D0D] text-[20px]"
          id="scenario-title"
        >
          Test Scenario Details
        </div>
        <button
          aria-label="Share scenario"
          class="flex items-center gap-2 px-4 py-2 text-[#374151] hover:bg-gray-50 rounded-md transition-colors"
          title="Share this scenario"
        >
          <svg
            data-testid="share-icon"
          />
          <span
            class="text-base"
          >
            Share
          </span>
        </button>
      </div>
      <div
        class="flex flex-col"
      >
        <div
          class="text-base font-semibold text-[#0D0D0D]"
        >
          Scenario:
        </div>
        <p
          class="text-base text-[#656565]"
        >
          This is a detailed description of the scenario that explains what the simulation covers.
        </p>
      </div>
      <div
        class="flex justify-center mt-2 mb-2"
      >
        <button
          aria-label="Start simulation"
          class="!font-tertiary !text-base  !py-3 !bg-gray-400 w-[240px]"
          data-testid="mock-button"
          data-variant="primary"
          disabled=""
        >
          <div
            class="mr-2"
            data-size="16"
            data-testid="circular-progress"
          />
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ScenarioDetailsCard > should match snapshot when noCredits is true 1`] = `
<DocumentFragment>
  <div
    animate="[object Object]"
    aria-labelledby="scenario-title"
    class="flex flex-col w-full max-w-[600px] bg-white overflow-hidden transition-all duration-300 rounded-lg origin-top border border-[#E5E7EB] p-3"
    exit="[object Object]"
    initial="[object Object]"
    role="dialog"
    transition="[object Object]"
  >
    <div
      class="relative w-full rounded-lg overflow-hidden"
    >
      <img
        alt="Test Scenario Details scenario preview"
        class="w-full max-h-[320px] object-cover rounded-md"
        loading="lazy"
        src="https://example.com/scenario-details-image.jpg"
      />
    </div>
    <div
      class="flex flex-col gap-1 mt-3 font-primary"
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="text-[#0D0D0D] text-[20px]"
          id="scenario-title"
        >
          Test Scenario Details
        </div>
        <button
          aria-label="Share scenario"
          class="flex items-center gap-2 px-4 py-2 text-[#374151] hover:bg-gray-50 rounded-md transition-colors"
          title="Share this scenario"
        >
          <svg
            data-testid="share-icon"
          />
          <span
            class="text-base"
          >
            Share
          </span>
        </button>
      </div>
      <div
        class="flex flex-col"
      >
        <div
          class="text-base font-semibold text-[#0D0D0D]"
        >
          Scenario:
        </div>
        <p
          class="text-base text-[#656565]"
        >
          This is a detailed description of the scenario that explains what the simulation covers.
        </p>
      </div>
      <div
        class="flex justify-center mt-2 mb-2"
      >
        <button
          aria-label="Start simulation"
          class="!font-tertiary !text-base  !py-3 !bg-gray-400 w-[240px]"
          data-testid="mock-button"
          data-variant="primary"
          disabled=""
        >
          Start Simulation
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
